# rust-beginners-course

./: Cargo.toml
section_01_basics/ch_01_hello_world/src/: main.rs
section_01_basics/ch_02_type_variables/: Cargo.toml
section_01_basics/ch_02_type_variables/src/: main.rs
section_01_basics/ch_03_functions/: Cargo.toml
section_01_basics/ch_03_functions/src/: main.rs
section_01_basics/ch_04_modules/: Cargo.toml
section_01_basics/ch_04_modules/src/: main.rs  meetings.rs
section_01_basics/ch_04_modules/src/greetings/: evening.rs  mod.rs  morning.rs
section_01_basics/exercise_module/: Cargo.toml
section_01_basics/exercise_module/src/: config.rs  main.rs
section_01_basics/exercise_module/src/models/: product.rs  user.rs
section_01_basics/exercise_module/src/services/: auth.rs  mod.rs  payment.rs
section_02_control_ownership/ch_01_ifelse_condition/: Cargo.toml
section_02_control_ownership/ch_01_ifelse_condition/src/: main.rs
section_02_control_ownership/ch_02_match_condition/: Cargo.toml
section_02_control_ownership/ch_02_match_condition/src/: main.rs
section_02_control_ownership/ch_03_loop/: Cargo.toml
section_02_control_ownership/ch_03_loop/src/: main.rs
section_02_control_ownership/ch_04_stack_heap/: Cargo.toml
section_02_control_ownership/ch_04_stack_heap/src/: main.rs
section_02_control_ownership/ch_05_ownership_borrowing/: Cargo.toml
section_02_control_ownership/ch_05_ownership_borrowing/src/: main.rs
section_02_control_ownership/exercise/: README.md
section_02_control_ownership/exercise/src/: main.rs
src/: main.rs
(+2 files in other folders)
