[workspace]
members = [
    "section_01_basics/ch_01_hello_world", 
    "section_01_basics/ch_02_type_variables", "section_01_basics/ch_03_functions", "section_01_basics/ch_04_modules", "section_01_basics/exercise_module", "section_02_control_ownership/ch_01_ifelse_condition", "section_02_control_ownership/ch_02_match_condition", "section_02_control_ownership/ch_03_loop", "section_02_control_ownership/ch_04_stack_heap", "section_02_control_ownership/ch_05_ownership_borrowing", "section_02_control_ownership/exercise", 
]

# ใช้ dependency resolver version 2 (แนะนำสำหรับ Rust 1.56+ หรือปี 2021+)
resolver = "2"

# กำหนดให้ ch_01_hello_world เป็น default member
# ที่จะใช้เมื่อเรียกใช้ cargo build หรือ cargo run
default-members = ["section_01_basics/ch_01_hello_world"]
